[tool.poetry]
name = "ujokesrv"
version = "0.1.0"
description = ""
authors = ["Grigory Bakunov <thebobuk@ya.ru>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.2"
ujson = "^4.0.2"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
bpython = "^0.21"
mypy = "^0.812"
black = "^21.5b1"
pytest = "^6.2.4"
pre-commit = "^2.12.1"
flake8 = "^3.9.2"
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
